# keybot

./: .gitattributes  .gitignore  COLAB_GUIDE.md  COLAB_SETUP.md  COLAB_USAGE.md  README.md  SYSTEM_COMPONENTS_OVERVIEW.md  USAGE.md  colab_keepalive.py  demo_notebook.ipynb  load_and_visualize.py  pyproject.toml  requirements.txt  setup_and_run.sh  setup_colab_auth.py  verify_demo_setup.py  visualize_vertebrae.py
codes/: AnomalySuggestion_get_model.py  evaluate_AASCE.py  train_AASCE.py  util.py
codes/model/iterativeRefinementModels/RITM_modules/: RITM_hrnet.py
codes/preprocess_data/: data_split.py
codes/preprocess_data/AASCE_processed/: test.json  test_images.json  train.json  val.json  val_images.json
codes/preprocess_data/AASCE_processed/test/: sunhl-1th-02-Jan-2017-162 B AP.npy  sunhl-1th-05-Jan-2017-167 B AP.npy  sunhl-1th-05-Jan-2017-172 A AP.npy  sunhl-1th-05-Jan-2017-173 A AP.npy  sunhl-1th-05-Jan-2017-174 A AP.npy  sunhl-1th-05-Jan-2017-176 A AP.npy  sunhl-1th-06-Jan-2017-177 A AP.npy  sunhl-1th-06-Jan-2017-178 B AP.npy  sunhl-1th-06-Jan-2017-189 A AP.npy  sunhl-1th-06-Jan-2017-190 A AP.npy  sunhl-1th-06-Jan-2017-192 A AP.npy  sunhl-1th-09-Jan-2017-192 B AP.npy  sunhl-1th-09-Jan-2017-194 B AP.npy  sunhl-1th-09-Jan-2017-195 B AP.npy  (+113 more)
codes/suggest_codes/: get_pseudo_generation_model_image_heatmap.py  get_suggest_model.py
custom_images/: README.md
save/AASCE_interactive_keypoint_estimation/: config.yaml  log.txt  manual_result.pickle  model.pth  post_result.pickle
save_refine/: AASCE_refineModel.pth
save_suggestion/: AASCE_suggestModel.pth
(+353 files in other folders)
